--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,17 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@article{wills2000,
+  title={Natural selection: interactive subset creation},
+  author={Wills, Graham J},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={9},
+  number={3},
+  pages={544--557},
+  year={2000},
+  publisher={Taylor \& Francis}
+}
+
 @Article{	  abbate1999,
   author	= {Abbate, J.},
   title		= {{Getting small: a short history of the personal
@@ -191,6 +202,24 @@
   year		= {2022},
   publisher	= {IEEE}
 }
+
+@article{wickham2011,
+  title={tourr: An R package for exploring multivariate data with projections},
+  author={Wickham, Hadley and Cook, Dianne and Hofmann, Heike and Buja, Andreas},
+  journal={Journal of Statistical Software},
+  volume={40},
+  pages={1--18},
+  year={2011}
+}
+
+
+@Manual{waddell2023,
+    title = {loon: Interactive Statistical Data Visualization},
+    author = {Adrian Waddell and R. Wayne Oldford},
+    year = {2023},
+    note = {R package version 1.4.1},
+    url = {https://CRAN.R-project.org/package=loon},
+  }
 
 @Article{	  becker1987,
   title		= {Brushing scatterplots},
@@ -1071,6 +1100,17 @@
   publisher	= {Pearson Deutschland GmbH}
 }
 
+@article{chen2015,
+  title={What may visualization processes optimize?},
+  author={Chen, Min and Golan, Amos},
+  journal={IEEE transactions on visualization and computer graphics},
+  volume={22},
+  number={12},
+  pages={2619--2632},
+  year={2015},
+  publisher={IEEE}
+}
+
 @Article{	  gelman2013,
   title		= {Infovis and statistical graphics: different goals,
 		  different looks},
@@ -1398,6 +1438,14 @@
     year = {2024},
     note = {R package version 1.9.1},
     url = {https://CRAN.R-project.org/package=shiny},
+  }
+
+   @Manual{cheng2024,
+    title = {httpuv: HTTP and WebSocket Server Library},
+    author = {Joe Cheng and Winston Chang and Steve Reid and James Brown and Bob Trower and Alexander Peslyak},
+    year = {2024},
+    note = {R package version 1.6.15},
+    url = {https://CRAN.R-project.org/package=httpuv},
   }
 
 @Manual{	  htmlwidgets2021,
